--- a/project.config.json
+++ b/project.config.json
@@ -16,7 +16,7 @@
 	"compileType": "miniprogram",
 	"libVersion": "2.0.4",
 	"appid": "wx749d4375ddd97232",
-	"projectname": "猴淘购",
+	"projectname": "%E7%8C%B4%E6%B7%98%E8%B4%AD",
 	"debugOptions": {
 		"hidedInDevtools": []
 	},
