--- a/app.json
+++ b/app.json
@@ -17,23 +17,25 @@
     "pages/user-details/user-details",
     "pages/authorize/authorize",
     "pages/home/home",
-    "pages/choose-address/choose-address"
+    "pages/choose-address/choose-address",
+    "pages/coupon/coupon",
+    "pages/tab-bar/tab-bar"
   ],
   "tabBar": {
-    "color": "#999999",
-    "selectedColor": "#EC5D29",
+    "color": "#b7bacd",
+    "selectedColor": "#333",
     "list": [
       {
         "pagePath": "pages/home/home",
-        "iconPath": "public/images/homepage_out.png",
-        "selectedIconPath": "public/images/homepage_on.png",
+        "iconPath": "public/images/home_out.png",
+        "selectedIconPath": "public/images/home_on.png",
         "text": "首页"
       },
       {
         "pagePath": "pages/cart/cart",
         "iconPath": "public/images/cart_out.png",
-        "selectedIconPath": "public/images/cart_in.png",
-        "text": "购物车"
+        "selectedIconPath": "public/images/cart_on.png",
+        "text": "我的围观"
       },
       {
         "pagePath": "pages/message/message",
