--- a/project.config.json
+++ b/project.config.json
@@ -10,11 +10,18 @@
 		"minified": true,
 		"newFeature": true,
 		"autoAudits": false,
+		"uglifyFileName": true,
 		"checkInvalidKey": true,
-		"uglifyFileName": true
+		"checkSiteMap": true,
+		"uploadWithSourceMap": true,
+		"babelSetting": {
+			"ignore": [],
+			"disablePlugins": [],
+			"outputPath": ""
+		}
 	},
 	"compileType": "miniprogram",
-	"libVersion": "2.0.4",
+	"libVersion": "2.1.1",
 	"appid": "wx749d4375ddd97232",
 	"projectname": "%E7%8C%B4%E6%B7%98%E8%B4%AD",
 	"debugOptions": {
